# medicano

./: .gitignore  CLAUDE.md  PLANO_DE_TESTES_MANUAIS.md  README.md  ecosystem.local.js  medicano.insomnia_collection.json  medicano.postman_collection.json  package-lock.json  package.json
.github/workflows/: deploy-api.yml  deploy-web.yml
apps/api/: ecosystem.config.js  package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.controller.spec.ts  (+3 more)
apps/web/: eslint.config.js  index.html  package.json  tsconfig.app.json
documentation/: .latexmkrc  main.tex
documentation/chapters/: 01-introduction.tex  02-theoretical-background.tex  03-methodology.tex  04-specification.tex  05-architecture.tex  06-schedule.tex  07-risks.tex  08-conclusion.tex
documentation/config/: metadata.tex  packages.tex  styles.tex
documentation/pretextual/: abstract-pt.tex
medicano_crew/: pyproject.toml  setup.sh
medicano_crew/docs/specs/: feature-registry.md  sprint-08-availability.md  sprint-08-prompts.json  sprint-10-profile-attendants.md  sprint-10-prompts.json  sprint-10b-fixes.json  sprint-11-prompts.json  sprint-11-schedule-notifications.md  sprint-11b-prereqs.json  sprint-12-prompts.json  sprint-12-tcc-alignment.md  sprint-13-prompts.json  sprint-14-corrections.md  sprint-14-prompts.json  sprint-15-cnpj-editable.json  sprint-16-settings.json
medicano_crew/src/medicano_crew/: main.py
medicano_crew/src/medicano_crew/crews/content_crew/: content_crew.py
medicano_crew/src/medicano_crew/crews/content_crew/config/: agents.yaml
scripts/: nginx.conf  setup-ec2.sh
(+208 files in other folders)
