[project]
name = "medicano_crew"
version = "0.1.0"
description = "medicano-crew using crewAI"
authors = [{ name = "Marcos Miotto", email = "marcos@medicano.app" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,litellm,tools]==1.14.2",
    "google-cloud-aiplatform>=1.60,<1.100",
    "protobuf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
]

[project.scripts]
kickoff = "medicano_crew.main:kickoff"
run_crew = "medicano_crew.main:kickoff"
plot = "medicano_crew.main:plot"
run_with_trigger = "medicano_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
